tests/compiler/function_generalization_2.kk.out
1
========

========
error:
  ┌─ tests/compiler/function_generalization_2.kk:3:33
  │
3 │ let y: {x: string, z: number} = {x = 2, y = {z = 3}}.f
  │                                 ^^^^^^^^^^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+---------------+
    | EXPECTED TYPE |  ACTUAL TYPE  |
    +---------------+---------------+
    |   {           |   {           |
    | -   x: string | +   x: number |
    |     z: number |     z: number |
    |   }           |   }           |
    +---------------+---------------+
